syntax = "proto2";

package com.donebawen.protobuf;
option optimize_for = SPEED;
option java_package = "com.dongbawen.netty.starter.the7th";
option java_outer_classname="ProtoBufInfo";

message Data {
    enum DataType{
        PersonType = 1;
        DogType = 2;
        CatType = 3;
    }
    required DataType data_type = 1;

    oneof dataBody {
        User user = 4;
        Dog dog = 2;
        Cat cat = 3;
    }
}

message User {
    optional string name = 1;
    optional int32 age = 2;
    optional string email = 3;
}

message Dog {
    optional string name = 1;
    optional string address = 2;
}

message Cat {
    optional string name = 1;
    optional int32 age = 2;
}